# rgent

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  config.rs  main.rs  operations.rs
