[package]
name = "rgent"
version = "0.1.0"
edition = "2021"
authors = ["Pawan Dubey <git@pawandubey.com>"]
description = "A speedy static site generator."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
assert_cmd = "2.0.7"
assert_fs = "1.0.10"
clap = { version = "4.0.32", features = ["derive"] }
exitcode = "1.1.2"
indoc = "1.0.8"
predicates = "2.1.4"
serde = { version = "1.0.151", features = ["derive"] }
toml = "0.5.10"
